# wifite3

./: AGENTS.md  DEPLOYMENT.md  Dockerfile.modern  Makefile  README.md  Wifite.py  demo_autoinstall.py  deploy.sh  deploy_agent.py  ninja_demo.py  pyproject.toml  pyproject.toml.backup  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  codeql.yml  dependency-review.yml  ossar-analysis.yml  scorecards.yml  snyk-analysis.yml  snyk-container-analysis.yml  snyk-infrastructure-analysis.yml  trivy-analysis.yml
tests/: test_Airmon.py  test_Airodump.py  test_Handshake.py  test_Target.py  test_realtime_crack_manager.py
tests/attack/: test_AttackAll.py  test_AttackPMKID.py  test_AttackWPA.py
wifite/: __init__.py  __main__.py  args.py  config.py  realtime_crack_manager.py
wifite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
wifite/attack/: all.py  pmkid.py  wep.py  wpa.py  wps.py
wifite/model/: attack.py  client.py  handshake.py  pmkid_result.py  result.py  target.py  wep_result.py  wpa_result.py  wps_result.py
wifite/tools/: aircrack.py  aireplay.py  airmon.py  airodump.py  bully.py  cowpatty.py  dependency.py  hashcat.py  ifconfig.py  iwconfig.py  john.py  macchanger.py  openmpi.py  pyrit.py  reaver.py  tshark.py  wash.py
wifite/util/: color.py  crack.py  input.py  process.py  scanner.py  timer.py
wifite3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
